--- a/src/pages/imaging/imaging.html
+++ b/src/pages/imaging/imaging.html
@@ -37,8 +37,8 @@
         <ion-grid >
           <ion-row>
             <ion-col col-10 >
-              <p style="font-size: small;color: white; margin-left: -2vw;">{{card.city}}</p>
-              <p style="font-size: larger;color: white;"><b>{{card.name}}</b></p>
+              <p style="font-size: small;color: white; margin-left: -2vw;"><b>{{card.city}}</b></p>
+              <p style="font-size: larger;color: white;">{{card.name}}</p>
           </ion-col>
           <ion-col>
             <!--
@@ -53,16 +53,16 @@
           </ion-col>
           </ion-row>
           <ion-row >
-          <p id="cardinfo" style="font-size: small;color: white;">
-            Patient Pickup to Destination: <b>{{card.TimeWithMultChar}}</b></p>
-            <br>
             <p class="imageText">{{card.services}}</p>
-            <br>
+            <br><!-- Put in the line somewhere here to have the expansion separated-->
+            <p style="font-size: small;color: white;">Time to Definitive Care
+              <span style="font-size: medium;"><b> XX:XX (n=X)</b></span></p>
+            <br><br>
           </ion-row>
           <expand expandHeight="20vh" [expanded]="card.expanded">
-          <ion-row >
-            <p style="font-size: small;color: white;">Fastest Total Time Achieved<br>Call to Definitive care:<br>
-            <span style="font-size: medium;"><b>XX:XX (n=X)</b></span></p>
+          <ion-row style="border-top: white 1px solid; padding-top: 1vh;">
+            <p id="cardinfo" style="font-size: small;color: white;">
+              Patient Pickup to Destination: <b>{{card.TimeWithMultChar}}</b></p>
           <ion-row *ngIf="card.HasDrive">
             <br>
             <ion-col col-3>
@@ -95,8 +95,8 @@
         <ion-grid >
           <ion-row>
             <ion-col col-10 >
-              <p style="font-size: small;color: white;margin-left: -2vw;">{{card.city}}</p>
-              <p style="font-size: larger;color: white;"><b>{{card.name}}</b></p>
+              <p style="font-size: small;color: white;margin-left: -2vw;"><b>{{card.city}}</b></p>
+              <p style="font-size: larger;color: white;">{{card.name}}</p>
           </ion-col>
           <ion-col>
             <!--
@@ -111,16 +111,17 @@
           </ion-col>
           </ion-row>
           <ion-row >
-          <p id="cardinfo" style="font-size: small;color: white;">
-            Patient Pickup to Destination: <b>{{card.TimeWithMultChar}}</b></p>
-            <br>
             <p style="color: white;">{{card.services}}</p>
             <br>
+            <p style="font-size: small;color: white;">Time to Definitive Care:
+              <span style="font-size: medium;"><b> XX:XX (n=X)</b></span></p>
+            <br>
           </ion-row>
-          <expand expandHeight="20vh" [expanded]="card.expanded">
-          <ion-row>
-            <p style="font-size: small;color: white;">Fastest Total Time Achieved<br>Call to Definitive care:<br>
-            <span style="font-size: medium;"><b>XX:XX (n=X)</b></span></p>
+          <expand expandHeight="20vh" [expanded]="card.expanded" style="border-top: white 1px;">
+            
+          <ion-row style="border-top: white 1px solid; padding-top: 1vh;">
+            <p id="cardinfo" style="font-size: small;color: white;">
+              Patient Pickup to Destination: <b>{{card.TimeWithMultChar}}</b></p>
             <ion-row *ngIf="card.HasFly">
               <ion-col col-4>
                 <!--
