- added the new wording for the button

--- a/src/pages/last-known-well/last-known-well.html
+++ b/src/pages/last-known-well/last-known-well.html
@@ -39,7 +39,7 @@
    <br>
     <ion-row center>
       <ion-col text-center>
-      <button ion-button center round (click)="TimeModal()" small style="text-align: center;font-size: larger;">Help</button>
+      <button ion-button center round (click)="TimeModal()" small style="text-align: center;font-size: larger;">More Information</button>
     </ion-col>  
     </ion-row>
     <div class="spacer" style="height:7vh;" id="lastKnownWell-spacer7"></div>
