- fixed the issue where the 4A and 5A plans where not showing up - made the search results for the map search clear

--- a/src/pages/last-known-well/last-known-well.html
+++ b/src/pages/last-known-well/last-known-well.html
@@ -13,7 +13,7 @@
 <ion-content no-bounce padding class="card" style="height: 100vh;" id="page2">
 <div style="height:6vh;"></div>
   <h3 text-center id="lastKnownWell-heading5" >
-    What time was the patient last known to be well?
+    What time was<br> the patient last known to be well?
   </h3>
 
 
