--- a/src/pages/next-steps/next-steps.html
+++ b/src/pages/next-steps/next-steps.html
@@ -42,29 +42,29 @@
       <h5><i>Reference:</i></h5><ol><li><i>MOU for Acute Stroke Bypass and Transfer Agreement</i></li><li><i>Acute Stroke Algorithm</i></li></ol>
     </div>
     <div *ngSwitchCase="4">
-      <br><h4 text-center>Consult with Telestroke Neurologist utilizing the Telestroke program</h4><br>
+      <br><h4 text-center>Consult with<br> Telestroke Neurologist<br> utilizing the Telestroke program</h4><br>
       <div text-center>
       <p><a href="tel:8076684357" center ion-button round  small class="callButton"><button ion-button small>Call</button></a><br>CritiCall <span class="Call"><br>@ 1-807-668-4357</span></p><br><br>
     </div>
       <h5><i>Reference:</i></h5><p><i>Telestroke Referring Site Handbook</i></p>
     </div>
     <div *ngSwitchCase="'4A'">
-      <br><h4 text-center>We understand you are at a Telestroke Site. We assume your imaging capabilities (CT) are suspended.<br>
-        Your patient requires imaging to proceed.</h4><br>
+      <br><h4 text-center>We understand you are<br> at a Telestroke Site.<br> We assume your<br> imaging capabilities (CT)<br> are suspended.<br><br>
+        Your patient requires<br> imaging to proceed.</h4><br>
         <div text-center>
         <p><b><u><span class="CallText">Call:</span></u></b><br>Your closest imaging capable site and inform them of patient transfer</p><br><br>
       </div>
         <h5><i>Reference:</i></h5><ol><li><i>Telestroke Referring Site Handbook</i></li><li><i>NWO Telestroke Acute Stroke Protocol</i></li></ol> 
     </div>
     <div *ngSwitchCase="5">
-      <br><h4 text-center>Consult with Acute Stroke Physician at Thunder Bay utilizing the Regional Critical Response Program</h4><br>
+      <br><h4 text-center>Consult with<br> Acute Stroke Physician<br> in Thunder Bay utilizing the<br> Regional Critical Care Response<br> program.</h4><br>
       <div text-center>
       <p><a href="tel:8076684357" center ion-button round  small class="callButton"><button ion-button small>Call</button></a><br>CritiCall<span class="Call"><br>@ 1-807-668-4357</span></p><br><br>
     </div>
       <h5><i>Reference:</i></h5><p><i>RCCR Initial Consultation Algorithm</i></p>
     </div>
     <div *ngSwitchCase="'5A'">
-      <br><h4 text-center>Consult with Acute Stroke Physician at Thunder Bay utilizing the Regional Critical Response Program. Stay and receive direction from RCCR.</h4><br>
+      <br><h4 text-center>Consult with<br> Acute Stroke Physician<br> in Thunder Bay utilizing the<br> Regional Critical Care Response<br>program.<br><br> Stay and receive direction<br> from RCCR team.</h4><br>
       <div text-center>
       <p><a href="tel:8076684357" center ion-button round  small class="callButton"><button ion-button small>Call</button></a><br>CritiCall<span class="Call"><br>@ 1-807-668-4357</span></p><br><br>
     </div>
@@ -84,7 +84,9 @@
     </div>
     <div *ngSwitchCase="9">
       <div text-center>
-      <br><p><a href="tel:8076846001" center ion-button round  small class="callButton"><button ion-button small>Call</button></a><br>Acute Stroke Physician @ TBRHSC <span class="Call"><br>@ 1-807-684-6001</span></p>
+        <br>
+        <h4>Stay and receive direction.</h4>
+      <p><a href="tel:8076846001" center ion-button round  small class="callButton"><button ion-button small>Call</button></a><br>Acute Stroke Physician @ TBRHSC <span class="Call"><br>@ 1-807-684-6001</span></p>
       <br><b><span style="font-size: large;">&</span></b><br><br>
       <p><b><u><span style="font-size: large;">Send:</span></u></b><br>Urgent Referral to TBRHSC Stroke Prevention Clinic<br><span class="Call">Fax: 807-684-5883</span></p><br><br>
     </div>
