-Made the spacing changes to the LKW tips page

--- a/src/pages/lkw-modal/lkw-modal.html
+++ b/src/pages/lkw-modal/lkw-modal.html
@@ -13,17 +13,26 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding style="font-size: medium;">
-<h2>How to gather details of the patient's Last Known Well</h2>
+<ion-content padding style="font-size: medium;"text-center>
+<h2>How to gather details<br>of the patient's<br>Last Known Well</h2>
 <br>
 <div style="color: black;">
-<b><p style="color: black;">Remember: LKW <u>may not</u> be when symptoms where first observed</p></b>
+<b><p style="color: black;">Remember:<br>
+  LKW <u>may not</u> be when<br>
+  symptoms where first observed</p></b>
 <br>
-<p style="color: black;">LKW is when the patient was last at their baseline function, NOT when stroke symptoms started (note: it can the same if it was witnessed in person).</p>
+<p style="color: black;">LKW is when the patient was last<br>
+  at their baseline function<br>
+  NOT when stroke symptoms started<br>
+  (note: it can the same if it<br>was witnessed in person).</p>
 <br>
-<p style="color: black;">This app supports a navigation system based on "time windows" to potential acute treatment. A valid time is required to proceed through the app.</p>
+<p style="color: black;">This app supports a navigation system based on "time windows"<br>
+  to potential acute treatment.<br>
+  A valid time is required<br>
+  to proceed through the app.</p>
 <br><br>
-<p style="color: black;"><b>Creatively inquire</b> of patient or family:</p>
+<p style="color: black;"><b>Creatively inquire<br></b>
+  of patient or family:</p>
 </div>
 <br>
 
@@ -34,7 +43,8 @@
 <br>
 <p>What where they doing last?</p>
 <br>
-<p>What do they normally do at that time of day? Earlier?</p>
+<p>What do they normally do<br>
+  at that time of day? Earlier?</p>
 <br>
 <p>Did you notice anything that would indicate they had been in a normal routine?</p>
 </div>
