- added the search to the other mapping page

--- a/src/pages/map/map.html
+++ b/src/pages/map/map.html
@@ -59,7 +59,27 @@
   
     </div>
 
-    <div #Map class="map" style="height: 80vh" ></div>
+    <ion-searchbar #searchBar (ionInput)="SearchInput()" [(ngModel)]="SearchResults"></ion-searchbar>
+  <div #Map class="map" [hidden]="HideMap" [style.height]=height></div>
+  <ion-scroll [hidden]="!HideMap" scrollY="true" [style.height]=height class="scroller">
+    <ion-list *ngIf="!NoResults">
+    <div *ngFor="let result of Results">
+      <ion-item (click)="AddPlace(result)" text-wrap *ngIf="result.name; else notcentre">
+        <ion-label >
+      {{result.city}}: {{result.name}}
+    </ion-label>
+    </ion-item>
+    <ng-template #notcentre>
+      <ion-item text-wrap (click)="AddPlace(result)">
+<ion-label>
+  {{result.city}}
+</ion-label>
+      </ion-item>
+      </ng-template>
+    </div>
+  </ion-list>
+  <div *ngIf="NoResults"><h1 text-center>No Results</h1></div>
+  </ion-scroll>
 
          
   </ion-content>
