--- a/src/pages/next-steps/next-steps.html
+++ b/src/pages/next-steps/next-steps.html
@@ -76,8 +76,8 @@
       <br><br>OR<br><br> your local emergency number</p>
     </div>
     <div *ngSwitchCase="7" text-center style="font-size: large;">
-      <br><h4 text-center>Consult with EVT surgeon</h4><br>
-      <span class="CallText"><p><b><u>Call:</u></b></p></span><br><p>EVT site</p>
+      <br><h4 text-center>Consult with EVT specialist</h4><br>
+      <p><a href="tel:8076684357" center ion-button round  small class="callButton"><button ion-button small>Call</button></a><br>CritiCall<span class="Call"><br>@ 1-807-668-4357</span></p>
     </div>
     <div *ngSwitchCase="8" text-center style="font-size: large;">
       <br><br><br><p><a href="tel:8076846001" center ion-button round  small class="callButton"><button ion-button small>Call</button></a><br>Acute Stroke Physician @ TBRHSC <span class="Call"><br>@ 1-807-684-6001</span></p>
