--- a/src/pages/next-steps/next-steps.html
+++ b/src/pages/next-steps/next-steps.html
@@ -42,11 +42,18 @@
       <h5><i>Reference:</i></h5><ol><li><i>MOU for Acute Stroke Bypass and Transfer Agreement</i></li><li><i>Acute Stroke Algorithm</i></li></ol>
     </div>
     <div *ngSwitchCase="4">
-      <br><h4 text-center>Consult with<br> Telestroke Neurologist<br> utilizing the Telestroke program</h4><br>
+      <br><h4 text-center>We understand you<br>are not activating your<br>direct transportation protocol.<br><br>Your patient requires<br>imaging to proceed.</h4><br>
       <div text-center>
-      <p><a href="tel:8076684357" center ion-button round  small class="callButton"><button ion-button small>Call</button></a><br>CritiCall <span class="Call"><br>@ 1-807-668-4357</span></p><br><br>
+      <p><a href="tel:8076484598" center ion-button round  small class="callButton"><button ion-button small>Call</button></a><br>CACC Kenora <span class="Call"><br>@ 1-807-468-4598</span></p><br>
     </div>
-      <h5><i>Reference:</i></h5><p><i>Telestroke Referring Site Handbook</i></p>
+    <h5><i>Reference:</i></h5><ol><li><i>MOU for Acute Stroke Bypass and Transfer Agreement</i></li><li><i>Acute Stroke Algorithm</i></li></ol>
+    </div>
+    <div *ngSwitchCase="'4B'">
+      <br><h4 text-center>We understand you<br>are not activating your<br>direct transportation protocol.<br><br>Your patient requires<br>imaging to proceed.</h4>
+      <div text-center>
+        <br><p><a href="tel:8076237342" center ion-button round  small class="callButton"><button ion-button small>Call</button></a><br>CACC Thunder Bay<br><span class="Call">@ 1-807-623-7342</span></p><br>
+    </div>
+    <h5><i>Reference:</i></h5><ol><li><i>MOU for Acute Stroke Bypass and Transfer Agreement</i></li><li><i>Acute Stroke Algorithm</i></li></ol>
     </div>
     <div *ngSwitchCase="'4A'">
       <br><h4 text-center>We understand you are<br> at a Telestroke Site.<br> We assume your<br> imaging capabilities (CT)<br> are suspended.<br><br>
@@ -55,6 +62,13 @@
         <p><b><u><span class="CallText">Call:</span></u></b><br>Your closest imaging capable site and inform them of patient transfer</p><br><br>
       </div>
         <h5><i>Reference:</i></h5><ol><li><i>Telestroke Referring Site Handbook</i></li><li><i>NWO Telestroke Acute Stroke Protocol</i></li></ol> 
+    </div>
+    <div *ngSwitchCase="'4C'">
+      <br><h4 text-center>Consult with<br> Telestroke Neurologist<br> utilizing the Telestroke program<br>for treatment options</h4><br>
+  <div text-center>
+  <p><a href="tel:8076684357" center ion-button round  small class="callButton"><button ion-button small>Call</button></a><br>CritiCall <span class="Call"><br>@ 1-807-668-4357</span></p><br><br>
+</div>
+  <h5><i>Reference:</i></h5><p><i>Telestroke Referring Site Handbook</i></p>
     </div>
     <div *ngSwitchCase="5">
       <br><h4 text-center>Consult with<br> Acute Stroke Physician<br> in Thunder Bay utilizing the<br> Regional Critical Care Response<br> program.</h4><br>
