--- a/src/pages/t-pa-question/t-pa-question.html
+++ b/src/pages/t-pa-question/t-pa-question.html
@@ -15,7 +15,7 @@
 <ion-content padding id="tPA-Question">
    <!-- <div style="height: 9vh;"></div>-->
   <h3 id="imagingRequired-heading3" text-center style="color:#006bb6;font-weight:400;font-size: xx-large;">
-    Has your patient had tPA?
+    Has your patient a candidate for tPA?
   </h3>
   <!--This is a simple decision page that will bring you to the EVT-options page if you select yes and the treatment page with both EVT and tPA if you select no -->
   <div class="spacer" style="height:100px;" id="imagingRequired-spacer4"></div>
