- fixed some missing data - made the name fit in the column for treatment options

--- a/src/pages/treatment/treatment.html
+++ b/src/pages/treatment/treatment.html
@@ -314,10 +314,13 @@
     </ion-list>
     </ion-scroll>
     </div>
+
+
+    
     <!--the weather information of the origin location  -->
-      <ion-grid style="background-color: #006bb6;">
+    <ion-grid style="background-color: #006bb6;">
       <ion-row>
-        <ion-col>
+        <ion-col col-auto>
           <p id="weather" style="background-color:#006bb6;color: white;font-size: large;padding-top: 1vh;">Weather in<br><b>{{this.Data.city}}</b></p>
         </ion-col>
         <ion-col>
@@ -328,5 +331,6 @@
         </ion-col>
       </ion-row>
     </ion-grid>
+
      <!--end of the page -->
 </ion-content>
