--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -7,4 +7,6 @@
 <button ion-button  block on-click="goToLKW()" large round>
   Next 
 </button>
+
+<p><a href={{phoneN}} center ion-button round  small class="callButton"><button ion-button small>Call</button></a><br>{{city}} and inform of patient transfer<span class="Call"><br>@ {{phoneT}}</span></p><br>
 </ion-content>
