-Added the Image to the tips button and the LKW Modal -Tried looking at Plans for evt cases

--- a/src/pages/lkw-modal/lkw-modal.html
+++ b/src/pages/lkw-modal/lkw-modal.html
@@ -6,7 +6,9 @@
 -->
 <ion-header>
   <ion-navbar  text-center>
-    <ion-title>Tips</ion-title>
+    <ion-title>
+      <img class="image" height="25vh" width="25vh" src= "./assets/imgs/MagnifyTW.png">
+      Tips</ion-title>
     <ion-buttons end>
       <button ion-button (click)="CloseInfo()">Close</button>
     </ion-buttons>
