- Added new page for EVT sites -Made a lot of changes to plans and such -Added telestroke to the search to make it better -Made a function for next pages in patient location for better reuse.

--- a/src/pages/next-steps/next-steps.html
+++ b/src/pages/next-steps/next-steps.html
@@ -72,13 +72,6 @@
   <h5><i>Reference:</i></h5><p><i>Telestroke Referring Site Handbook</i></p>
     </div>
     <div *ngSwitchCase="5">
-      <br><h4 text-center>Consult with<br> Acute Stroke Physician<br> in Thunder Bay utilizing the<br> Regional Critical Care Response<br> program.</h4><br>
-      <div text-center>
-      <p><a href="tel:8006684357" center ion-button round  small class="callButton"><button ion-button small>Call</button></a><br>CritiCall<span class="Call"><br>@ 1-800-668-4357</span></p><br><br>
-    </div>
-      <h5><i>Reference:</i></h5><p><i>RCCR Initial Consultation Algorithm</i></p>
-    </div>
-    <div *ngSwitchCase="'5A'">
       <br><h4 text-center>Consult with<br> Acute Stroke Physician<br> in Thunder Bay utilizing the<br> Regional Critical Care Response<br>program.<br><br> Stay and receive direction<br> from RCCR team.</h4><br>
       <div text-center>
       <p><a href="tel:8006684357" center ion-button round  small class="callButton"><button ion-button small>Call</button></a><br>CritiCall<span class="Call"><br>@ 1-800-668-4357</span></p><br><br>
@@ -93,7 +86,7 @@
     <div *ngSwitchCase="7" text-center style="font-size: large;">
       <br><h4 text-center>Consult with EVT specialist</h4><br>
       <p><a href="tel:8006684357" center ion-button round  small class="callButton"><button ion-button small>Call</button></a><br>CritiCall<span class="Call"><br>@ 1-800-668-4357</span></p><br>
-      <p ><a href={{this.Data.Destination.phoneN}} center ion-button round  small class="callButton"><button ion-button small>Call</button></a><br>{{this.Data.Destination.city}} ED<span class="Call"><br>@ {{this.Data.Destination.phoneT}}</span></p><br>
+      <br> <p>Stay and receive<br>further direction</p>
     </div>
     <div *ngSwitchCase="8" text-center style="font-size: large;">
       <br><br><br><p><a href="tel:8076846001" center ion-button round  small class="callButton"><button ion-button small>Call</button></a><br>Acute Stroke Physician @ TBRHSC <span class="Call"><br>@ 1-807-684-6001</span></p>
