--- a/src/pages/tutorial/tutorial.html
+++ b/src/pages/tutorial/tutorial.html
@@ -26,7 +26,7 @@
   </ion-slide>
 </ion-slides>
 -->
-<ion-slides pager="true">
+<ion-slides pager="true" style="color: blue;">
   <ion-slide>
     <img class="SlideImg" src= "./assets/icon/Logo.png">
     <p>Slide 1</p>
