--- a/src/pages/last-known-well/last-known-well.html
+++ b/src/pages/last-known-well/last-known-well.html
@@ -28,7 +28,7 @@
       <ion-datetime style="width: 100%;" type="date" id="lastKnownWellDateTime" [(ngModel)]="GivenDate" [max]="MaxDate" float-center displayFormat="MMM D" pickerFormat="MMM D" formControlName="date"></ion-datetime><!--The time picker without the date included -->
     </ion-item>
     <div class="spacer" style="height:3vh;" id="lastKnownWell-spacer7"></div>
-    <p text-center>Time in EST</p><!--Look at making it just time -->
+    <p text-center>Time</p><!--Look at making it just time -->
     <br>
     <ion-item id="lastKnownWellTime" style="background-color: lightgray;text-align: center;" class="roundedEntry">
       <ion-datetime style="width: 100%;" displayFormat="HH:mm" pickerFormat="HH mm" float-center [(ngModel)]="myTime" formControlName="time1"></ion-datetime><!--The time picker without the date included -->
