--- a/src/pages/evt-options/evt-options.html
+++ b/src/pages/evt-options/evt-options.html
@@ -51,8 +51,14 @@
             <ion-row >
               <p class="imageText">{{card.services}}</p>
               <br><!-- Put in the line somewhere here to have the expansion separated-->
-              <p style="font-size: small;color: white;">Historical Time to Definitive Care
-                <span style="font-size: medium;"><b> XX:XX<!-- (n=X)--></b></span></p>
+              <div *ngIf="card.HistDrive">
+                <p style="font-size: small;color: white;">Historical Time to Definitive Care
+                  <span style="font-size: medium;"><b> {{card.HistDriveDat.AvgString}}<!-- (n=X)--></b></span></p>
+              </div>
+              <div *ngIf="!card.HistDrive">
+                <p style="font-size: small;color: white;">Historical Time to Definitive Care
+                  <span style="font-size: medium;"><b> XX:XX<!-- (n=X)--></b></span></p>
+              </div>
               <br><br>
             </ion-row>
             <expand expandHeight="20vh" [expanded]="card.expanded">
@@ -64,7 +70,12 @@
                 <img class="image" src= "./assets/Travel/Ambulance.png">
               </ion-col>
               <ion-col>
-                <p class="imageText"><!--{{card.Drive.TimeWithMultChar}}-->XX:XX</p>
+                <div *ngIf="card.HistDrive">
+                  <p class="imageText"><!--{{card.Drive.TimeWithMultChar}}-->{{card.HistDriveDat.AvgString}}</p>
+                </div>
+                <div *ngIf="!card.HistDrive">
+                  <p class="imageText"><!--{{card.Drive.TimeWithMultChar}}-->XX:XX</p>
+                </div>
               </ion-col>
             </ion-row>
             <ion-row *ngIf="card.HasFly">
@@ -79,7 +90,7 @@
               </ion-row>
             </ion-row>
             <p id="cardinfo" style="font-size: small;color: white;">
-              Patient Pickup to Destination: <b>{{card.TimeWithMultChar}}</b></p>
+              Estimated Institution to Institution: <b>{{card.TimeWithMultChar}}</b></p>
           </expand>
           
           </ion-grid>
@@ -110,8 +121,15 @@
             <ion-row >
               <p style="color: white;">{{card.services}}</p>
               <br>
-              <p style="font-size: small;color: white;">Historical Time to Definitive Care:
-                <span style="font-size: medium;"><b> XX:XX <!--(n=X)--></b></span></p>
+              <div *ngIf="card.HistDrive">
+                <p style="font-size: small;color: white;">Historical Time to Definitive Care:
+                  <span style="font-size: medium;"><b> {{card.HistDriveDat.AvgString}} <!--(n=X)--></b></span></p>
+              </div>
+              <div *ngIf="!card.HistDrive">
+                <p style="font-size: small;color: white;">Historical Time to Definitive Care:
+                  <span style="font-size: medium;"><b> XX:XX <!--(n=X)--></b></span></p>
+              </div>
+              
               <br>
             </ion-row>
             <expand expandHeight="20vh" [expanded]="card.expanded" style="border-top: white 1px;">
@@ -134,12 +152,17 @@
                   <img class="image" src= "./assets/Travel/Ambulance.png">
                 </ion-col>
                 <ion-col>
-                  <p class="imageText"><!--{{card.Drive.TimeWithMultChar}}-->XX:XX</p>
+                  <div *ngIf="card.HistDrive">
+                    <p class="imageText"><!--{{card.Drive.TimeWithMultChar}}-->{{card.HistDriveDat.AvgString}}</p>
+                  </div>
+                  <div *ngIf="!card.HistDrive">
+                    <p class="imageText"><!--{{card.Drive.TimeWithMultChar}}-->XX:XX</p>
+                  </div>
                 </ion-col>
               </ion-row>
             </ion-row>
             <p id="cardinfo" style="font-size: small;color: white;">
-              Institution to Institution: <b>{{card.TimeWithMultChar}}</b></p>
+              Estimated Institution to Institution: <b>{{card.TimeWithMultChar}}</b></p>
             </expand>
           </ion-grid>
         </ion-card-content>
