--- a/src/pages/tutorial-modal/tutorial-modal.html
+++ b/src/pages/tutorial-modal/tutorial-modal.html
@@ -10,9 +10,7 @@
       Tutorial
     </ion-title>
     <ion-buttons end>
-      <button ion-button icon-only menuToggle right>
-        <ion-icon name='menu'></ion-icon>
-      </button>
+      <button ion-button (click)="CloseInfo()">Close</button>
     </ion-buttons>
   </ion-navbar>
   </ion-header>
