--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -1,11 +1,9 @@
 <ion-header>
   <ion-navbar text-center>
     <ion-title>Contact</ion-title>
-  <ion-buttons end>
-    <button ion-button icon-only menuToggle right>
-      <ion-icon name='menu'></ion-icon>
-    </button>
-  </ion-buttons>
+    <ion-buttons end>
+      <button ion-button (click)="CloseInfo()">Close</button>
+    </ion-buttons>
 </ion-navbar>
 </ion-header>
 
